--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/next": "^10.29.1",
     "@trpc/react-query": "^10.29.1",
     "@trpc/server": "^10.29.1",
+    "@vercel/analytics": "^1.0.1",
     "@vercel/og": "0.5.7",
     "body-scroll-lock": "^4.0.0-beta.0",
     "classnames": "^2.3.2",
