--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^2.0.18",
     "@portabletext/react": "3.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@react-google-maps/api": "^2.18.1",
     "@react-spring/web": "^9.7.2",
     "@sanity/image-url": "1.0.2",
     "@sanity/vision": "3.12.0",
